# pdf_ocr

./: .flutter-plugins-dependencies  pubspec.yaml
example/: pubspec.yaml
example/lib/: home.dart  main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
lib/: pdf_ocr.dart
lib/clients/: pdf_ocr_client.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/api/: extract.dart
lib/rust/api/extract/: csv_extractor.dart  docx_extractor.dart  pdf_extractor.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: extract.rs
rust/src/api/extract/: csv_extractor.rs  docx_extractor.rs  pdf_extractor.rs
windows/: CMakeLists.txt
